p2/conf/app2.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
      - name: app2
        image: paulbouwer/hello-kubernetes:1.10

        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 8080
