p2/conf/app3.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3

  template:
    metadata:
      labels:
        app: app3

    spec:
      containers:
      - name: app3
        image: paulbouwer/hello-kubernetes:1.10

        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 8080
