p2/conf/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-p2
  labels:
    name: ingress-p2
spec:
  rules:
  - host: app1.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1-service
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2-service
            port:
              number: 80
  - host: app3.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app3-service
            port:
              number: 80
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-service
              port:
                number: 80
  defaultBackend:
    service:
      name: app1-service
      port:
        number: 80
